<?xml version="1.0" encoding="utf-8"?>
<!--* This project is done by Khaidem Sandip Singha under the Udacity Android Foundations Nanodegree program.
    *
    * I confirm that this submission is my own work. I have not used code from any other Udacity student's or graduate's submission of the same project.
    * I understand that Udacity will check my submission for plagiarism, and that failure to adhere to the Udacity Honor Code may result in the cancellation of my
    * enrollment.
    *-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.musicplayer.PlayingNow">

        <TextView
            android:id="@+id/playText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playText"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/text_size_two"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:id="@+id/playDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playText"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/playDetails"/>

        <ImageView
            android:id="@+id/image_music"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_three"
            android:layout_below="@id/playDetails"
            android:src="@drawable/music_image"
            android:contentDescription="@string/musicImage"/>

        <Button
            android:id="@+id/bt_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playDetails"
            android:layout_marginLeft="@dimen/margin_two"
            android:layout_alignParentLeft="true"
            android:text="@string/stop"
            android:layout_marginTop="@dimen/margin_four"/>
        <Button
            android:id="@+id/bt_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playDetails"
            android:layout_centerHorizontal="true"
            android:text="@string/play"
            android:layout_marginTop="@dimen/margin_four"/>
        <Button
            android:id="@+id/bt_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playDetails"
            android:layout_marginRight="@dimen/margin_two"
            android:layout_alignParentRight="true"
            android:text="@string/pause"
            android:layout_marginTop="@dimen/margin_four"/>
        <Button
            android:id="@+id/bt_next_playNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playDetails"
            android:layout_centerHorizontal="true"
            android:text="@string/details"
            android:layout_marginTop="@dimen/details"/>

    </RelativeLayout>
</ScrollView>
