<?xml version="1.0" encoding="utf-8"?>
<!--* This project is done by Khaidem Sandip Singha under the Udacity Android Foundations Nanodegree program.
    *
    * I confirm that this submission is my own work. I have not used code from any other Udacity student's or graduate's submission of the same project.
    * I understand that Udacity will check my submission for plagiarism, and that failure to adhere to the Udacity Honor Code may result in the cancellation of my
    * enrollment.
    *-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicplayer.Albums">

    <TextView
        android:id="@+id/albumsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/albumsManifest"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/text_size_two"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/albumsDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumsText"
        android:layout_marginLeft="@dimen/margin_two"
        android:layout_marginBottom="@dimen/margin_two"
        android:layout_marginRight="@dimen/margin_two"
        android:text="@string/albumsDetails"/>

    <Button
        android:id="@+id/bt_pr_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/previous"
        />

    <Button
        android:id="@+id/bt_next_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/next" />


</RelativeLayout>
